--- a/StockAnalysis/Login/LoginViewController.xib
+++ b/StockAnalysis/Login/LoginViewController.xib
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
             <connections>
                 <outlet property="countryCodeButton" destination="emg-wb-7QF" id="2p0-CA-S28"/>
+                <outlet property="lookPwBtn" destination="48G-6D-z03" id="aPS-ay-5hg"/>
                 <outlet property="passwordInput" destination="TKs-Z4-E6W" id="VuT-RH-7p0"/>
                 <outlet property="usernameInput" destination="f7T-iv-6XE" id="ZMj-SA-daM"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -22,23 +23,13 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Gnn-q2-hpc">
-                    <rect key="frame" x="158" y="55" width="59" height="59"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-big" translatesAutoresizingMaskIntoConstraints="NO" id="Gnn-q2-hpc">
+                    <rect key="frame" x="148.5" y="55" width="78" height="90"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="59" id="EMb-tP-ftI"/>
-                        <constraint firstAttribute="height" constant="59" id="quB-ux-1MP"/>
+                        <constraint firstAttribute="width" constant="78" id="EMb-tP-ftI"/>
+                        <constraint firstAttribute="height" constant="90" id="quB-ux-1MP"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ZEDA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lbw-Ae-s1J">
-                    <rect key="frame" x="150" y="115" width="79" height="32"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="32" id="4qA-L3-8Rc"/>
-                        <constraint firstAttribute="width" constant="79" id="VD6-Ph-Z6L"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                    <color key="textColor" red="0.78431372549019607" green="0.63921568627450975" blue="0.20784313725490194" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qzo-MG-jE9">
                     <rect key="frame" x="0.0" y="220" width="375" height="107"/>
                     <subviews>
@@ -82,8 +73,8 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f7T-iv-6XE">
-                            <rect key="frame" x="99" y="7" width="239" height="30"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="手机号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f7T-iv-6XE">
+                            <rect key="frame" x="91" y="8" width="247" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="2oL-l5-ga4"/>
                             </constraints>
@@ -91,6 +82,14 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="48G-6D-z03" userLabel="lookpw">
+                            <rect key="frame" x="309" y="86" width="21" height="12"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Button" image="eye-c"/>
+                            <connections>
+                                <action selector="clickLookPw:" destination="-1" eventType="touchUpInside" id="ebA-HT-qcl"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
@@ -163,13 +162,12 @@
                 <constraint firstItem="7vX-CO-YBv" firstAttribute="top" secondItem="qzo-MG-jE9" secondAttribute="bottom" constant="62" id="efC-5J-wkK"/>
                 <constraint firstAttribute="top" secondItem="qzo-MG-jE9" secondAttribute="bottom" constant="-327" id="o4a-7q-xOU"/>
                 <constraint firstItem="Gnn-q2-hpc" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="oS7-x6-Sqp"/>
-                <constraint firstItem="lbw-Ae-s1J" firstAttribute="centerX" secondItem="Gnn-q2-hpc" secondAttribute="centerX" constant="2" id="qtq-Ds-l8y"/>
-                <constraint firstItem="lbw-Ae-s1J" firstAttribute="top" secondItem="Gnn-q2-hpc" secondAttribute="top" constant="60" id="x8H-Xx-WRL"/>
             </constraints>
             <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
     </objects>
     <resources>
-        <image name="logo" width="76" height="76"/>
+        <image name="eye-c" width="43" height="24"/>
+        <image name="logo-big" width="157" height="181"/>
     </resources>
 </document>
