--- a/StockAnalysis/Login/MailLoginViewController.xib
+++ b/StockAnalysis/Login/MailLoginViewController.xib
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MailLoginViewController">
             <connections>
+                <outlet property="lookPwBtn" destination="tfJ-Kh-Xfx" id="2tt-Dd-ukA"/>
                 <outlet property="mailInput" destination="gS1-ru-6ZD" id="64S-AO-lfp"/>
                 <outlet property="passwordInput" destination="ym7-0z-PcG" id="gzu-7p-GoT"/>
                 <outlet property="view" destination="fbK-JN-iRW" id="Oi3-e5-oaZ"/>
@@ -22,23 +23,13 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="AOR-C7-AOO">
-                    <rect key="frame" x="158" y="55" width="59" height="59"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-big" translatesAutoresizingMaskIntoConstraints="NO" id="AOR-C7-AOO">
+                    <rect key="frame" x="148.5" y="55" width="78" height="90"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="59" id="8jJ-0x-2RH"/>
-                        <constraint firstAttribute="height" constant="59" id="fOS-OQ-TgM"/>
+                        <constraint firstAttribute="width" constant="78" id="8jJ-0x-2RH"/>
+                        <constraint firstAttribute="height" constant="90" id="fOS-OQ-TgM"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ZEDA" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cwn-c2-wwj">
-                    <rect key="frame" x="150" y="115" width="79" height="32"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="32" id="7Yk-0J-cnd"/>
-                        <constraint firstAttribute="width" constant="79" id="Mls-BZ-Ger"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
-                    <color key="textColor" red="0.7843137255" green="0.63921568630000003" blue="0.20784313730000001" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o5N-Zh-jvh">
                     <rect key="frame" x="0.0" y="220" width="375" height="107"/>
                     <subviews>
@@ -70,7 +61,7 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gS1-ru-6ZD">
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="点击输入" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gS1-ru-6ZD">
                             <rect key="frame" x="75" y="7" width="263" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="cuB-Tl-p5B"/>
@@ -87,6 +78,14 @@
                             <state key="normal" title="邮箱">
                                 <color key="titleColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tfJ-Kh-Xfx">
+                            <rect key="frame" x="317" y="87" width="21" height="12"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Button" image="eye-c"/>
+                            <connections>
+                                <action selector="clickLookPw:" destination="-1" eventType="touchUpInside" id="DbY-mS-59s"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -157,10 +156,8 @@
                 <constraint firstItem="o5N-Zh-jvh" firstAttribute="leading" secondItem="fbK-JN-iRW" secondAttribute="leading" id="Uzd-gZ-Tem"/>
                 <constraint firstItem="Nue-Ly-4Ex" firstAttribute="top" secondItem="o5N-Zh-jvh" secondAttribute="bottom" constant="62" id="VNg-NV-LKh"/>
                 <constraint firstItem="Vyq-LR-qwK" firstAttribute="leading" secondItem="Nue-Ly-4Ex" secondAttribute="leading" constant="20" id="ViX-xv-lz7"/>
-                <constraint firstItem="Cwn-c2-wwj" firstAttribute="top" secondItem="AOR-C7-AOO" secondAttribute="top" constant="60" id="ZsH-dL-wMb"/>
                 <constraint firstItem="7Mc-5O-pmn" firstAttribute="trailing" secondItem="Nue-Ly-4Ex" secondAttribute="trailing" constant="-20" id="ch3-9X-bZd"/>
                 <constraint firstAttribute="top" secondItem="o5N-Zh-jvh" secondAttribute="bottom" constant="-327" id="iG6-YV-nal"/>
-                <constraint firstItem="Cwn-c2-wwj" firstAttribute="centerX" secondItem="AOR-C7-AOO" secondAttribute="centerX" constant="2" id="iPY-yH-Cjh"/>
                 <constraint firstItem="o5N-Zh-jvh" firstAttribute="width" secondItem="fbK-JN-iRW" secondAttribute="width" id="syp-Q7-e0J"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ky9-5X-JTh"/>
@@ -168,6 +165,7 @@
         </view>
     </objects>
     <resources>
-        <image name="logo" width="76" height="76"/>
+        <image name="eye-c" width="43" height="24"/>
+        <image name="logo-big" width="157" height="181"/>
     </resources>
 </document>
